--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,24 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="grid_spacing">8dp</dimen>
+    <dimen name="grid_spacing_and_half">12dp</dimen>
+    <dimen name="grid_spacing_and_three_quarter">14dp</dimen>
+    <dimen name="grid_spacing_and_quarter">10dp</dimen>
+    <dimen name="grid_spacing_double">16dp</dimen>
+    <dimen name="grid_spacing_double_and_quarter">18dp</dimen>
+    <dimen name="grid_spacing_double_and_half">20dp</dimen>
+    <dimen name="grid_spacing_triple">24dp</dimen>
+    <dimen name="grid_spacing_triple_and_half">28dp</dimen>
+    <dimen name="grid_spacing_quadruple">32dp</dimen>
+    <dimen name="grid_spacing_quadruple_and_half">36dp</dimen>
+    <dimen name="grid_spacing_quintuple">40dp</dimen>
+    <dimen name="grid_spacing_quintuple_and_half">44dp</dimen>
+    <dimen name="grid_spacing_sextuple_and_half">52dp</dimen>
+    <dimen name="grid_spacing_septuple">56dp</dimen>
+    <dimen name="grid_spacing_quarter">2dp</dimen>
+    <dimen name="grid_spacing_half">4dp</dimen>
+    <dimen name="grid_spacing_decuple">80dp</dimen>
+    <dimen name="grid_spacing_three_quarter">6dp</dimen>
 </resources>
