--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@android:color/black"
+    android:background="@drawable/background"
     tools:context="com.expense.tamal.expenseshare.activity.BaseActivity">
 
     <android.support.design.widget.AppBarLayout
