--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,10 +3,49 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_centerHorizontal="true"
+    android:background="@drawable/background"
     tools:context=".activity.SplashActivity">
 
+    <FrameLayout
+        android:id="@+id/loading_animation"
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center">
+
+        <ImageView
+            android:id="@+id/loading_spinner"
+            android:layout_width="@dimen/splash_loader"
+            android:layout_height="@dimen/splash_loader"
+            android:layout_gravity="center"
+            android:src="@drawable/loading_spinner_large" />
+    </FrameLayout>
+
+
+    <ViewFlipper
+        android:id="@+id/viewFlipper"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@+id/loading_animation"
+        android:layout_marginTop="@dimen/grid_spacing_quadruple">
+
+        <TextView
+            android:id="@+id/msg1"
+            style="@style/Content.Bold.White"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="@string/splash_message_1" />
+
+        <TextView
+            android:id="@+id/msg2"
+            style="@style/Content.Bold.White"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="@string/splash_message_2" />
+    </ViewFlipper>
 </RelativeLayout>
+
