--- a/app/src/main/res/layout/fragment_home_no_events.xml
+++ b/app/src/main/res/layout/fragment_home_no_events.xml
@@ -2,19 +2,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context="com.expense.tamal.expenseshare.fragments.HomeNoEventsFragment">
 
-    <TextView
-        android:id="@+id/text1"
-        android:layout_centerInParent="true"
+    <ImageSwitcher
+        android:id="@+id/imageSwitcher"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Create event"/>
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true" >
+    </ImageSwitcher>
 
-    <ImageView
-        android:layout_above="@id/text1"
+    <Button
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/ic_menu_camera" />
+        android:layout_height="wrap_content" />
 
 </RelativeLayout>
