--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -35,6 +35,11 @@
     <dimen name="text_size_very_small">12sp</dimen>
     <dimen name="text_size_tiny">10sp</dimen>
 
+    <dimen name="button_height">48dp</dimen>
+
     <!-- Splash -->
     <dimen name="splash_loader">150dp</dimen>
+
+    <!-- Home -->
+    <dimen name="steps_height">240dp</dimen>
 </resources>
