--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -283,5 +283,12 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
-
+<!-- Home -->
+    <style name="AddEvents">
+        <item name="android:background">@drawable/button_action_home</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/text_size_small</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
 </resources>
