Adding home screen members and items module

--- a/app/src/main/res/layout/fragment_home_current_event.xml
+++ b/app/src/main/res/layout/fragment_home_current_event.xml
@@ -14,6 +14,7 @@
         android:clipToPadding="true">
 
         <LinearLayout
+            android:id="@+id/container"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -21,13 +22,19 @@
             <com.expense.tamal.expenseshare.views.BudgetModule
                 android:id="@+id/budget_overview"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/activity_horizontal_margin"/>
 
-            <Button
-                android:id="@+id/testButton"
-                android:text="Test"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+            <com.expense.tamal.expenseshare.views.HomeItemsModule
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/activity_horizontal_margin"/>
+
+            <com.expense.tamal.expenseshare.views.HomeMembersModule
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/activity_horizontal_margin"/>
+
         </LinearLayout>
     </ScrollView>
 
