--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,10 @@
         <!-- colorAccent is used as the default value for colorControlActivated,
              which is used to tint widgets -->
         <item name="colorAccent">@color/link_blue_opacity90</item>
+        <item name="colorControlNormal">@color/iron</item>
+        <item name="colorControlActivated">@color/white</item>
+        <item name="colorControlHighlight">@color/white</item>
+        <item name="android:textColorHint">@color/iron</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -283,7 +287,7 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
-<!-- Home -->
+    <!-- Home -->
     <style name="AddEvents">
         <item name="android:background">@drawable/button_action_home</item>
         <item name="android:textColor">@color/white</item>
