--- a/app/src/main/res/values/strings_add_edit_events.xml
+++ b/app/src/main/res/values/strings_add_edit_events.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="event_name_hint">Something to remember by</string>
-    <string name="event_date_hint">When it happened</string>
+    <string name="event_date_hint">When</string>
     <string name="event_type">Which type</string>
-
+    <string name="event_budget">Spend no more than</string>
+    <string name="event_members">My buddies are</string>
 </resources>
